--- a/notebooks/1_into.ipynb
+++ b/notebooks/1_into.ipynb
@@ -15,25 +15,33 @@
       }
      },
      "source": [
-      "\n",
       "### Neal Caren  \n",
       "Department of Sociology  \n",
       "University of North Carolina,  Chapel Hill  \n",
       "neal.caren@gmail.com  \n",
-      "@haphazardsoc  \n"
+      "@haphazardsoc  \n",
+      "\n",
+      "\n",
+      "Code available from  \n",
+      "http://nealcaren.github.io/workshop_2014/\n",
+      "\n",
+      "Please make sure you have a copy of IPython up and running, ideally from Anacodna.\n",
+      "\n",
+      "If you are bored, download the zip file, unzip it, and open up an `IPython Notebook`.\n",
+      "\n",
+      "If you are still bored, sign up at the [New York Times](http://developer.nytimes.com) to be a developer."
      ]
     },
     {
      "cell_type": "markdown",
-     "metadata": {
-      "slideshow": {
-       "slide_type": "slide"
-      }
-     },
+     "metadata": {},
      "source": [
-      "Winning makes us happy.  \n",
-      "![](files/fb.png)  \n",
-      "by Sean J. Taylor (@seanjtaylor)"
+      "### Two overlapping projects\n",
+      "\n",
+      "\n",
+      "1. Collecting text and non-text data from the web.\n",
+      "    a. Sometimes they want to give it to you (APIs)\n",
+      "    b. Sometimes they don't (HTML scraping)"
      ]
     },
     {
@@ -60,6 +68,50 @@
       "Or map who supports secession\n",
       "\n",
       "![](files\\petitions.png)"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
+     "source": [
+      "### Two overlapping projects\n",
+      "\n",
+      "\n",
+      "1. Collecting text and non-text data from the web.\n",
+      "    a. Sometimes they want to give it to you (APIs)\n",
+      "    b. Sometimes they don't (HTML scraping)\n",
+      "2. Analyze text data, that may or may not have been downloaded."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
+     "source": [
+      "Trends in Tea Party Coverage\n",
+      "\n",
+      "![](files\\tpm_lda.png)"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
+     "source": [
+      "How the New York Times writes about and women\n",
+      "\n",
+      "![](files/times_female.png)\n",
+      "![](files/times_male.png)\n"
      ]
     },
     {
@@ -123,7 +175,7 @@
       }
      },
      "source": [
-      "![](files/Stanford.jpg)"
+      "![](files/stanford.png)"
      ]
     },
     {
@@ -302,20 +354,12 @@
       "\n",
       "* [NLTK](http://nltk.org) Natural Language Toolkit. There's a [book](http://nltk.org/book/)\n",
       "* [scikit-learn](http://scikit-learn.org/stable/) Machine learning\n",
-      "* [pandas](http://pandas.pydata.org) Data management and analysis\n",
+      "* [pandas](http://pandas.pydata.org) Data management and analysis. There is a book.\n",
       "* [gensim](http://radimrehurek.com/gensim/) Topic modeling\n",
       "* [NetworkX](http://networkx.github.io) Network analysis\n",
-      "* [NumPy](http://www.numpy.org) and [scipy](http://scipy.org) Computational backbone\n",
+      "* [matplotlib](http://matplotlib.org) Plotting* [NumPy](http://www.numpy.org) and [scipy](http://scipy.org) Computational backbone\n",
       "* [rpy](http://rpy.sourceforge.net) Python bindings for R\n"
      ]
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
     }
    ],
    "metadata": {}
