--- a/notebooks/2_Twitter.ipynb
+++ b/notebooks/2_Twitter.ipynb
@@ -86,7 +86,29 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "def make_random_id_numbers(list_size):\n",
+      "# Keys for authenticating Python\n",
+      "consumer_key        = 'vIdNIV4AYVW0E47ipzUeg'\n",
+      "consumer_secret     = 'IY1Nzu13fN3ki0QVx8wbdnlwMql20WnGWvy7fjZY0'\n",
+      "access_token        = '730945789-j2Ju2nnZoxHBXUPcZaUb0orLtj7WTSHAJvirvQDd'\n",
+      "access_token_secret = 'SKU4jKEiYeoR4Twxm7vQlYvTk3Rpv45i7li3vWBo'\n",
+      "\n",
+      "# Highest observed Twitter account number\n",
+      "max_id = 2327203915"
+     ],
+     "language": "python",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
+     "outputs": [],
+     "prompt_number": 2
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def make_random_id_numbers(list_size, max_id):\n",
       "    random_integers = [random.randint(0,max_id) for id in range(0,list_size)]\n",
       "    random_integers = [str(id) for id in random_integers]\n",
       "    numbers = ','.join(random_integers)\n",
@@ -100,6 +122,29 @@
      },
      "outputs": [],
      "prompt_number": 5
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def make_random_id_numbers(list_size, max_id):\n",
+      "    '''\n",
+      "    Returns a random list of size list_size of possible twitter ids.\n",
+      "    IDs cound range from 0 to max_id size\n",
+      "    '''\n",
+      "    random_integers = [random.randint(0,max_id) for id in range(0,list_size)]\n",
+      "    random_integers = [str(id) for id in random_integers]\n",
+      "    numbers = ','.join(random_integers)\n",
+      "    return numbers"
+     ],
+     "language": "python",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
+     "outputs": [],
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
@@ -140,7 +185,7 @@
      "input": [
       "for sample_number in range(1,100):\n",
       "    \n",
-      "    numbers = make_random_id_numbers(100)\n",
+      "    numbers = make_random_id_numbers(100, max_id)\n",
       "    \n",
       "    sample_user_information = twitter_client.users.lookup(user_id = numbers)\n",
       "    \n",
@@ -1264,6 +1309,13 @@
       }
      ],
      "prompt_number": 21
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Should we go back and see you many people have Tweeted in February? Or weekly usage?"
+     ]
     }
    ],
    "metadata": {}
