--- a/notebooks/4_Upworthy.ipynb
+++ b/notebooks/4_Upworthy.ipynb
@@ -206,7 +206,11 @@
     },
     {
      "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
      "source": [
       "When a simple idea...\n",
       "\n",
@@ -640,7 +644,11 @@
     },
     {
      "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
      "source": [
       "Production time!!!"
      ]
@@ -1635,6 +1643,15 @@
       "3. Write a regular expression that matches what you want.\n",
       "4. Write regular expression that actually matches what you want.\n",
       "5. Production!"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "It gets more complicated.\n",
+      "\n",
+      "In general, the more a company profits from their information as a unique resource, the harder it is to scape."
      ]
     }
    ],
