--- a/notebooks/5_Times_API.ipynb
+++ b/notebooks/5_Times_API.ipynb
@@ -28,7 +28,7 @@
      "source": [
       "What are APIs?\n",
       "\n",
-      "Structure ways people can give you their data."
+      "Structured ways people can give you their data."
      ]
     },
     {
@@ -122,7 +122,7 @@
       }
      },
      "source": [
-      "APIs can  can be accessed like a normal URL, but they are often very long, complicated, and involve variables you want to change. For example, you can get the information about the first 10 articles published in the New York Times that used the word inequality with:\n",
+      "APIs can be accessed like a normal URL, but they are often very long, complicated, and involve variables you want to change. For example, you can get the information about the first 10 articles published in the New York Times that used the word inequality with:\n",
       "\n",
       "[http://api.nytimes.com/svc/search/v2/articlesearch.json?sort=newest&begin_date=20130101&end_date=20131231&api-key=d20bc9ac37156ecc4cb3d78eb956201d%3A0%3A54059647&q=inequality&page=0](http://api.nytimes.com/svc/search/v2/articlesearch.json?sort=newest&begin_date=20130101&end_date=20131231&api-key=d20bc9ac37156ecc4cb3d78eb956201d%3A0%3A54059647&q=inequality&page=0)\n",
       "\n",
@@ -979,7 +979,7 @@
       }
      },
      "source": [
-      "Your turn. Modify the script below to prints and output a csv that outputs the monthly total of inequality articles. For an extra challenge, add an additional column with the count of the number of \"unemployment\" articles."
+      "Your turn. Modify the script below to output a csv with the monthly total of inequality articles. For an extra challenge, add an additional column with the count of the number of \"unemployment\" articles."
      ]
     },
     {
@@ -1796,14 +1796,6 @@
       }
      ],
      "prompt_number": 17
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
     }
    ],
    "metadata": {}
