--- a/notebooks/6_Classification.ipynb
+++ b/notebooks/6_Classification.ipynb
@@ -26,28 +26,39 @@
       }
      },
      "source": [
-      "1. Load the data(s)\n",
+      "1. Load the data\n",
       "2. Tranform variables\n",
+      "3. Select model and parameters\n",
       "3. Train the model\n",
       "4. Test the model\n",
-      "5. Goto 2"
+      "5. GOTO 2"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
+     "source": [
+      "Input our data from before"
      ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "\n",
       "upworthy_titles = open('upworthy_titles.txt', \"r\").read()"
      ],
      "language": "python",
      "metadata": {
       "slideshow": {
-       "slide_type": "slide"
+       "slide_type": "-"
       }
      },
      "outputs": [],
-     "prompt_number": 1
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
@@ -65,13 +76,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 3,
+       "prompt_number": 5,
        "text": [
         "\"5 Reasons Why My Girlfriend Thinks She's Not Beautiful Enough, No Matter What Anyone Tells Her\\nThe Perfect Reply A Girl Can Give To The Question 'What's Your Favorite Position?'\\nWhen A Simple Idea Like This Actually Works And It Helps People Get By, Everybody Wins\\nOne Of The Biggest Lies We\\xe2\\x80\\x99re Encouraged To Tell Ourselves About Our Value To Society Is Right Here\\nHe Was About To Take His Own Life \\xe2\\x80\\x94 Until A Man Stopped Him. Here He Meets Him Face To Face Again.\\nWhen I Was A Kid, An Ad Aired On\""
        ]
       }
      ],
-     "prompt_number": 3
+     "prompt_number": 5
     },
     {
      "cell_type": "markdown",
@@ -111,7 +122,7 @@
       }
      },
      "outputs": [],
-     "prompt_number": 5
+     "prompt_number": 6
     },
     {
      "cell_type": "code",
@@ -306,7 +317,7 @@
      "collapsed": false,
      "input": [
       "print len(upworthy)\n",
-      "print upworthy[:10]"
+      "print upworthy[:5]"
      ],
      "language": "python",
      "metadata": {
@@ -331,7 +342,7 @@
      "collapsed": false,
      "input": [
       "print len(titles)\n",
-      "print titles[:10]"
+      "print titles[:5]"
      ],
      "language": "python",
      "metadata": {
@@ -352,6 +363,35 @@
      "prompt_number": 13
     },
     {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "fragment"
+      }
+     },
+     "source": [
+      "I don't like that the X and the Y are in two unrelated lists. Matches cases depends on the sort order, so don't mess that up."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
+     "source": [
+      "What we want the data to look like next\n",
+      "\n",
+      "| upworthy | stop   | man  | obama  | explain  | everything  | you  | nato  | debate | industry | believe  \n",
+      "|:-----------|:----:| :----:| :----:| :----:| :----:| :----:| :----:| :----:| :----:| :----:| :----:| \n",
+      "| 1       | 0 | 1  | 0 | 0  | 0 | 2  | 0 | 0  | 0 | 1  \n",
+      "| 0       | 1 | 0  | 0 | 0  | 0 | 0  | 1| 1 | 0 | 0  \n",
+      "| 0       | 0 | 0  |1 | 1  | 0 | 0  | 0 | 0  | 1 | 0  \n",
+      "| 1       | 0 | 0  | 0 | 0  | 0 | 1  | 0 | 1   | 0 | 0  \n"
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
      "input": [
@@ -370,7 +410,9 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "vectorizer = CountVectorizer(min_df        = 2, \n",
+      "vectorizer = CountVectorizer(lowercase     = True ,\n",
+      "                             min_df        = 2 ,\n",
+      "                             max_df        = .5 ,\n",
       "                             ngram_range   = (1, 1),\n",
       "                             stop_words    = 'english', \n",
       "                             strip_accents = 'unicode')\n"
@@ -382,7 +424,7 @@
       }
      },
      "outputs": [],
-     "prompt_number": 16
+     "prompt_number": 83
     },
     {
      "cell_type": "code",
@@ -400,19 +442,19 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 17,
+       "prompt_number": 84,
        "text": [
         "CountVectorizer(analyzer=u'word', binary=False, charset=None,\n",
         "        charset_error=None, decode_error=u'strict',\n",
         "        dtype=<type 'numpy.int64'>, encoding=u'utf-8', input=u'content',\n",
-        "        lowercase=True, max_df=1.0, max_features=None, min_df=2,\n",
+        "        lowercase=True, max_df=0.5, max_features=None, min_df=2,\n",
         "        ngram_range=(1, 1), preprocessor=None, stop_words='english',\n",
         "        strip_accents='unicode', token_pattern=u'(?u)\\\\b\\\\w\\\\w+\\\\b',\n",
         "        tokenizer=None, vocabulary=None)"
        ]
       }
      ],
-     "prompt_number": 17
+     "prompt_number": 84
     },
     {
      "cell_type": "code",
@@ -427,7 +469,7 @@
       }
      },
      "outputs": [],
-     "prompt_number": 21
+     "prompt_number": 85
     },
     {
      "cell_type": "code",
@@ -442,7 +484,7 @@
       }
      },
      "outputs": [],
-     "prompt_number": 22
+     "prompt_number": 86
     },
     {
      "cell_type": "code",
@@ -457,7 +499,7 @@
       }
      },
      "outputs": [],
-     "prompt_number": 23
+     "prompt_number": 87
     },
     {
      "cell_type": "code",
@@ -475,13 +517,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 24,
+       "prompt_number": 88,
        "text": [
         "MultinomialNB(alpha=1.0, class_prior=None, fit_prior=True)"
        ]
       }
      ],
-     "prompt_number": 24
+     "prompt_number": 88
     },
     {
      "cell_type": "code",
@@ -496,7 +538,7 @@
       }
      },
      "outputs": [],
-     "prompt_number": 43
+     "prompt_number": 89
     },
     {
      "cell_type": "code",
@@ -514,13 +556,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 44,
+       "prompt_number": 90,
        "text": [
         "array([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1])"
        ]
       }
      ],
-     "prompt_number": 44
+     "prompt_number": 90
     },
     {
      "cell_type": "markdown",
@@ -530,7 +572,7 @@
       }
      },
      "source": [
-      "How many correctly predicted?"
+      "What % were correctly predicted?"
      ]
     },
     {
@@ -549,13 +591,20 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 45,
+       "prompt_number": 91,
        "text": [
         "0.91701592623637884"
        ]
       }
      ],
-     "prompt_number": 45
+     "prompt_number": 91
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Better fit statistics"
+     ]
     },
     {
      "cell_type": "code",
@@ -566,11 +615,11 @@
      "language": "python",
      "metadata": {
       "slideshow": {
-       "slide_type": "slide"
+       "slide_type": "-"
       }
      },
      "outputs": [],
-     "prompt_number": 42
+     "prompt_number": 92
     },
     {
      "cell_type": "code",
@@ -588,14 +637,25 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 46,
+       "prompt_number": 93,
        "text": [
         "array([[416,  84],\n",
         "       [ 15, 678]])"
        ]
       }
      ],
-     "prompt_number": 46
+     "prompt_number": 93
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
+     "source": [
+      "Sociologists care about coeficients, but they are a tucked away."
+     ]
     },
     {
      "cell_type": "code",
@@ -606,21 +666,21 @@
      "language": "python",
      "metadata": {
       "slideshow": {
-       "slide_type": "slide"
+       "slide_type": "fragment"
       }
      },
      "outputs": [
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 27,
+       "prompt_number": 94,
        "text": [
         "array([[-6.71921442, -6.31374931, -7.81782671, ..., -7.12467953,\n",
         "        -7.4123616 , -7.4123616 ]])"
        ]
       }
      ],
-     "prompt_number": 27
+     "prompt_number": 94
     },
     {
      "cell_type": "code",
@@ -629,18 +689,22 @@
       "len(clf.coef_[0])"
      ],
      "language": "python",
-     "metadata": {},
+     "metadata": {
+      "slideshow": {
+       "slide_type": "fragment"
+      }
+     },
      "outputs": [
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 28,
+       "prompt_number": 95,
        "text": [
         "1192"
        ]
       }
      ],
-     "prompt_number": 28
+     "prompt_number": 95
     },
     {
      "cell_type": "code",
@@ -649,18 +713,33 @@
       "len(vectorizer.vocabulary_)"
      ],
      "language": "python",
-     "metadata": {},
+     "metadata": {
+      "slideshow": {
+       "slide_type": "fragment"
+      }
+     },
      "outputs": [
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 29,
+       "prompt_number": 96,
        "text": [
         "1192"
        ]
       }
      ],
-     "prompt_number": 29
+     "prompt_number": 96
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "fragment"
+      }
+     },
+     "source": [
+      "I know what we can do."
+     ]
     },
     {
      "cell_type": "code",
@@ -706,64 +785,67 @@
        ]
       }
      ],
-     "prompt_number": 32
+     "prompt_number": 97
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "See anything different in this code?"
+     ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "from sklearn import cross_validation\n",
-      "import numpy as np"
+      "coefficients = zip(vectorizer.vocabulary_,clf.coef_[0])\n",
+      "coefficients = {h[0] : h[1] for h in coefficients}\n",
+      "\n",
+      "for word in sorted(coefficients, key = coefficients.get, reverse=False)[:20]:\n",
+      "    print word,coefficients[word]"
      ],
      "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "ron -8.5109738916\n",
+        "leads -8.5109738916\n",
+        "glimpse -8.5109738916\n",
+        "young -8.5109738916\n",
+        "james -8.5109738916\n",
+        "detention -8.5109738916\n",
+        "fat -8.5109738916\n",
+        "cool -8.5109738916\n",
+        "dating -8.5109738916\n",
+        "immediately -8.5109738916\n",
+        "die -8.5109738916\n",
+        "lapse -8.5109738916\n",
+        "pretend -8.5109738916\n",
+        "second -8.5109738916\n",
+        "street -8.5109738916\n",
+        "7th -8.5109738916\n",
+        "saved -8.5109738916\n",
+        "goes -8.5109738916\n",
+        "seeks -8.5109738916\n",
+        "box -8.5109738916\n"
+       ]
+      }
+     ],
+     "prompt_number": 98
+    },
+    {
+     "cell_type": "markdown",
      "metadata": {
       "slideshow": {
        "slide_type": "slide"
       }
      },
-     "outputs": [],
-     "prompt_number": 49
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "cross_validation.cross_val_score(clf, X, np.array(upworthy),  cv=10)"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 50,
-       "text": [
-        "array([ 0.81666667,  0.81666667,  0.86666667,  0.79831933,  0.81512605,\n",
-        "        0.83193277,  0.84033613,  0.79831933,  0.77310924,  0.85714286])"
-       ]
-      }
-     ],
-     "prompt_number": 50
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "np.mean(cross_validation.cross_val_score(clf, X, np.array(upworthy),  cv=10))"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 52,
-       "text": [
-        "0.8214285714285714"
-       ]
-      }
-     ],
-     "prompt_number": 52
+     "source": [
+      "Data scientists care about over fitting. We probably should too."
+     ]
     },
     {
      "cell_type": "code",
@@ -776,11 +858,11 @@
      "language": "python",
      "metadata": {
       "slideshow": {
-       "slide_type": "slide"
+       "slide_type": "fragment"
       }
      },
      "outputs": [],
-     "prompt_number": 54
+     "prompt_number": 99
     },
     {
      "cell_type": "code",
@@ -797,7 +879,7 @@
       }
      },
      "outputs": [],
-     "prompt_number": 55
+     "prompt_number": 100
     },
     {
      "cell_type": "code",
@@ -819,20 +901,20 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "classification accuracy: 0.917365269461\n"
+        "classification accuracy: 0.925748502994\n"
        ]
       },
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 56,
+       "prompt_number": 101,
        "text": [
-        "array([[289,  61],\n",
-        "       [  8, 477]])"
+        "array([[303,  57],\n",
+        "       [  5, 470]])"
        ]
       }
      ],
-     "prompt_number": 56
+     "prompt_number": 101
     },
     {
      "cell_type": "code",
@@ -854,24 +936,104 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "classification accuracy: 0.840782122905\n"
+        "classification accuracy: 0.821229050279\n"
        ]
       },
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 57,
+       "prompt_number": 102,
        "text": [
-        "array([[107,  43],\n",
-        "       [ 14, 194]])"
+        "array([[ 99,  41],\n",
+        "       [ 23, 195]])"
        ]
       }
      ],
-     "prompt_number": 57
+     "prompt_number": 102
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "from sklearn import cross_validation\n",
+      "import numpy as np"
+     ],
+     "language": "python",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
+     "outputs": [],
+     "prompt_number": 103
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "cross_validation.cross_val_score(clf, X, np.array(upworthy),  cv=10)"
+     ],
+     "language": "python",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "fragment"
+      }
+     },
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 104,
+       "text": [
+        "array([ 0.81666667,  0.81666667,  0.86666667,  0.79831933,  0.81512605,\n",
+        "        0.83193277,  0.84033613,  0.79831933,  0.77310924,  0.85714286])"
+       ]
+      }
+     ],
+     "prompt_number": 104
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "np.mean(cross_validation.cross_val_score(clf, X, np.array(upworthy),  cv=10))"
+     ],
+     "language": "python",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "fragment"
+      }
+     },
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 105,
+       "text": [
+        "0.8214285714285714"
+       ]
+      }
+     ],
+     "prompt_number": 105
     },
     {
      "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
+     "source": [
+      "Do we do any better by looking at bigrams? Go back up and change the values for CountVectorizer."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
      "source": [
       "What about a new headline?"
      ]
@@ -885,11 +1047,11 @@
      "language": "python",
      "metadata": {
       "slideshow": {
-       "slide_type": "slide"
+       "slide_type": "fragment"
       }
      },
      "outputs": [],
-     "prompt_number": 67
+     "prompt_number": 106
     },
     {
      "cell_type": "code",
@@ -904,13 +1066,13 @@
       }
      },
      "outputs": [],
-     "prompt_number": 68
+     "prompt_number": 107
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "clf.predict(soc_title_vector)"
+      "clf.predict_proba(soc_title_vector)"
      ],
      "language": "python",
      "metadata": {
@@ -922,13 +1084,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 69,
+       "prompt_number": 110,
        "text": [
-        "array([0])"
+        "array([[ 0.94490128,  0.05509872]])"
        ]
       }
      ],
-     "prompt_number": 69
+     "prompt_number": 110
     },
     {
      "cell_type": "code",
@@ -936,7 +1098,7 @@
      "input": [
       "gawker_title = 'Shocking Footage Aired of Police Shooting Face-Eating Nude Man'\n",
       "gawker_title_vector = vectorizer.transform([gawker_title])\n",
-      "clf.predict(gawker_title_vector)"
+      "clf.predict_proba(gawker_title_vector)"
      ],
      "language": "python",
      "metadata": {
@@ -948,13 +1110,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 70,
+       "prompt_number": 111,
        "text": [
-        "array([1])"
+        "array([[ 0.38060745,  0.61939255]])"
        ]
       }
      ],
-     "prompt_number": 70
+     "prompt_number": 111
     },
     {
      "cell_type": "markdown",
@@ -979,7 +1141,7 @@
       }
      },
      "source": [
-      "Make a prediction for:\n",
+      "Make a prediction for this out of sample abstract:\n",
       "\n",
       "This article investigates how changes in educational assortative mating affected the growth in earnings inequality among households in the United States between the late 1970s and early 2000s. The authors find that these changes had a small, negative effect on inequality: there would have been more inequality in earnings in the early 2000s if educational assortative mating patterns had remained as they were in the 1970s. Given the educational distribution of men and women in the United States, educational assortative mating can have only a weak impact on inequality, and educational sorting among partners is a poor proxy for sorting on earnings.\n"
      ]
@@ -989,8 +1151,13 @@
      "collapsed": false,
      "input": [],
      "language": "python",
-     "metadata": {},
-     "outputs": []
+     "metadata": {
+      "slideshow": {
+       "slide_type": "skip"
+      }
+     },
+     "outputs": [],
+     "prompt_number": 40
     }
    ],
    "metadata": {}
