--- a/notebooks/1_into.ipynb
+++ b/notebooks/1_into.ipynb
@@ -54,7 +54,7 @@
      "source": [
       "Yelp can tell us how SES structures food options.\n",
       "\n",
-      "![](files\\high_ses.png) ![](files\\mid_ses.png) ![](files\\low_ses.png)"
+      "![](https://raw.github.com/nealcaren/workshop_2014/master/notebooks/images/high_ses.png) ![](https://raw.github.com/nealcaren/workshop_2014/master/notebooks/images/mid_ses.png) ![](https://raw.github.com/nealcaren/workshop_2014/master/notebooks/images/low_ses.png)"
      ]
     },
     {
@@ -67,7 +67,7 @@
      "source": [
       "Or map who supports secession\n",
       "\n",
-      "![](files\\petitions.png)"
+      "![](http://nealcaren.github.io/workshop_2014/files/petitions.png)"
      ]
     },
     {
@@ -97,7 +97,19 @@
      "source": [
       "Trends in Tea Party Coverage\n",
       "\n",
-      "![](files\\tpm_lda.png)"
+      "![](https://raw.github.com/nealcaren/workshop_2014/master/notebooks/images/tpm_lda.png)"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
+     "source": [
+      "How many people were on Occupy Facebook pages?\n",
+      "![](https://raw.github.com/nealcaren/workshop_2014/master/notebooks/images/occupy.png)\n"
      ]
     },
     {
@@ -110,8 +122,8 @@
      "source": [
       "How the New York Times writes about and women\n",
       "\n",
-      "![](files/times_female.png)\n",
-      "![](files/times_male.png)\n"
+      "![](https://raw.github.com/nealcaren/workshop_2014/master/notebooks/images/times_female.png)\n",
+      "![](https://raw.github.com/nealcaren/workshop_2014/master/notebooks/images/times_male.png)\n"
      ]
     },
     {
@@ -175,7 +187,7 @@
       }
      },
      "source": [
-      "![](files/stanford.png)"
+      "![](https://raw.github.com/nealcaren/workshop_2014/master/notebooks/images/stanford.png)"
      ]
     },
     {
@@ -233,7 +245,7 @@
       "\n",
       "On a Mac\n",
       "\n",
-      "![](files/on_a_mac.png)"
+      "![](https://raw.github.com/nealcaren/workshop_2014/master/notebooks/images/on_a_mac.png)"
      ]
     },
     {
@@ -246,7 +258,7 @@
      "source": [
       "On Windows\n",
       "\n",
-      "![](files/windows.png)"
+      "![](https://raw.github.com/nealcaren/workshop_2014/master/notebooks/images/windows.png)"
      ]
     },
     {
@@ -259,7 +271,7 @@
      "source": [
       "#### Ipython Notebooks are what all the cool kids use.\n",
       "\n",
-      "![](files/first_screen.png)"
+      "![](https://raw.github.com/nealcaren/workshop_2014/master/notebooks/images/first_screen.png)"
      ]
     },
     {
@@ -272,7 +284,7 @@
      "source": [
       "#### A new notebook\n",
       "\n",
-      "![](files/new_workbook.png)"
+      "![](https://raw.github.com/nealcaren/workshop_2014/master/notebooks/images/blank.png)"
      ]
     },
     {
@@ -285,7 +297,7 @@
      "source": [
       "Cells can be Markdown (like this one) or code\n",
       "\n",
-      "![](files\\cell_types.png)"
+      "![](https://raw.github.com/nealcaren/workshop_2014/master/notebooks/images/cell_types.png)"
      ]
     },
     {
