--- a/notebooks/1_into.ipynb
+++ b/notebooks/1_into.ipynb
@@ -34,7 +34,11 @@
     },
     {
      "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
      "source": [
       "### Two overlapping projects\n",
       "\n",
@@ -108,7 +112,7 @@
       }
      },
      "source": [
-      "How many people were on Occupy Facebook pages?\n",
+      "What were Occupy supporters doing on Facebook?  \n",
       "![](https://raw.github.com/nealcaren/workshop_2014/master/notebooks/images/occupy.png)\n"
      ]
     },
@@ -125,6 +129,11 @@
       "![](https://raw.github.com/nealcaren/workshop_2014/master/notebooks/images/times_female.png)\n",
       "![](https://raw.github.com/nealcaren/workshop_2014/master/notebooks/images/times_male.png)\n"
      ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": []
     },
     {
      "cell_type": "markdown",
@@ -147,7 +156,31 @@
       }
      },
      "source": [
-      "well enough so that you can Google your problems, find the answer, and implement it."
+      "(well enough so that you can Google your problems, find the answer, and implement it.)"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "fragment"
+      }
+     },
+     "source": [
+      "Have you start thinking about what theoretical puzzles these methods can help you answer"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "fragment"
+      }
+     },
+     "source": [
+      "#### The fear:\n",
+      "Computational Social Scientist:  \n",
+      "- Someone who knows less theory than a sociologist and less programming than a computer scientist."
      ]
     },
     {
