--- a/notebooks/3_Sentiment.ipynb
+++ b/notebooks/3_Sentiment.ipynb
@@ -2618,6 +2618,20 @@
      },
      "outputs": [],
      "prompt_number": 94
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "#### Some takeaways\n",
+      "\n",
+      "1. That's most of what you need to know in Python. \n",
+      "    1. List comprehension\n",
+      "    1. Functions/Classes\n",
+      "2. Start simple.\n",
+      "    1.  Develop a solution for one case\n",
+      "    2.  Scale up (so make sure your 2A is generalizable.)"
+     ]
     }
    ],
    "metadata": {}
