--- a/notebooks/6_Classification.ipynb
+++ b/notebooks/6_Classification.ipynb
@@ -22,6 +22,29 @@
      "cell_type": "markdown",
      "metadata": {
       "slideshow": {
+       "slide_type": "slide"
+      }
+     },
+     "source": [
+      "#### Faking it as a Data Scientist\n",
+      "\n",
+      "1. Supervised learning / Classification\n",
+      "   1. Logistic Regression\n",
+      "   2. Naive Bayes\n",
+      "   3. SVM\n",
+      "   4. Ensemble/Random Forest\n",
+      "\n",
+      "2. Unsupervised learning\n",
+      "   1. PCA\n",
+      "   2. Topic Modeling\n",
+      "3. Features\n",
+      "4. Train/test"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
        "slide_type": "fragment"
       }
      },
