--- a/notebooks/2_Twitter.ipynb
+++ b/notebooks/2_Twitter.ipynb
@@ -57,10 +57,10 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "consumer_key        = 'vIdNIV4AYVW0E47ipzUeg'\n",
-      "consumer_secret     = 'IY1Nzu13fN3ki0QVx8wbdnlwMql20WnGWvy7fjZY0'\n",
-      "access_token        = '730945789-j2Ju2nnZoxHBXUPcZaUb0orLtj7WTSHAJvirvQDd'\n",
-      "access_token_secret = 'SKU4jKEiYeoR4Twxm7vQlYvTk3Rpv45i7li3vWBo'"
+      "consumer_key        = 'your-consumer-key'\n",
+      "consumer_secret     = 'your-consumer-secret'\n",
+      "access_token        = 'your-access-token'\n",
+      "access_token_secret = 'your-token-secret'"
      ],
      "language": "python",
      "metadata": {
@@ -69,7 +69,7 @@
       }
      },
      "outputs": [],
-     "prompt_number": 3
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -87,10 +87,10 @@
      "collapsed": false,
      "input": [
       "# Keys for authenticating Python\n",
-      "consumer_key        = 'vIdNIV4AYVW0E47ipzUeg'\n",
-      "consumer_secret     = 'IY1Nzu13fN3ki0QVx8wbdnlwMql20WnGWvy7fjZY0'\n",
-      "access_token        = '730945789-j2Ju2nnZoxHBXUPcZaUb0orLtj7WTSHAJvirvQDd'\n",
-      "access_token_secret = 'SKU4jKEiYeoR4Twxm7vQlYvTk3Rpv45i7li3vWBo'\n",
+      "consumer_key        = 'your-consumer-key'\n",
+      "consumer_secret     = 'your-consumer-secret'\n",
+      "access_token        = 'your-access-token'\n",
+      "access_token_secret = 'your-token-secret'\n",
       "\n",
       "# Highest observed Twitter account number\n",
       "max_id = 2327203915"
@@ -102,7 +102,7 @@
       }
      },
      "outputs": [],
-     "prompt_number": 2
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
@@ -121,7 +121,7 @@
       }
      },
      "outputs": [],
-     "prompt_number": 5
+     "prompt_number": 6
     },
     {
      "cell_type": "code",
@@ -144,7 +144,7 @@
       }
      },
      "outputs": [],
-     "prompt_number": 3
+     "prompt_number": 7
     },
     {
      "cell_type": "code",
@@ -187,8 +187,7 @@
       "    \n",
       "    numbers = make_random_id_numbers(100, max_id)\n",
       "    \n",
-      "    sample_user_information = twitter_client.users.lookup(user_id = numbers)\n",
-      "    \n",
+      "    sample_user_information = twitter_client.\n",
       "    user_database = user_database + sample_user_information\n",
       "    \n",
       "    print sample_number\n",
